# test_task_Infoteks

./: .gitignore  README.md
completed_task/: CMakeLists.txt  Readme.txt
completed_task/ansible/: ansible.cfg  inventory.ini  playbook.yaml
completed_task/ansible/roles/geerlingguy.docker/meta/: .galaxy_install_info
completed_task/docker/: dockerfile
completed_task/vagrant/: Vagrantfile
